feat: swagger конфигурация для фичи users
