# internal/features/auth/transport/http/login_user.go
@@ -23,6 +23,17 @@ func (r *LoginRequest) Validate() error {
 	return nil
 }
 
+// LoginUser godoc
+// @Summary Авторизация пользователя
+// @Description Авторизация пользователя в системе
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param request body LoginRequest true "LoginUser тело запроса"
+// @Success 201 {object} auth_service.LoginDTOResponse "Успешная авторизация"
+// @Failure 400 {object} core_transport_http_response.ErrorResponse "Bad request"
+// @Failure 500 {object} core_transport_http_response.ErrorResponse "Internal server error"
+// @Router /auth/login [post]
 func (h *AuthHTTPHandler) LoginUser(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
