# internal/features/auth/transport/http/refresh_token.go
@@ -22,6 +22,17 @@ func (r *RefreshTokenRequest) Validate() error {
 	return nil
 }
 
+// RefreshToken godoc
+// @Summary Обновление токена
+// @Description Обновление токена авторизированного пользователя
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param request body RefreshTokenRequest true "RefreshToken тело запроса"
+// @Success 201 {object} auth_service.LoginDTOResponse "Токен успешно обновлен"
+// @Failure 400 {object} core_transport_http_response.ErrorResponse "Bad request"
+// @Failure 500 {object} core_transport_http_response.ErrorResponse "Internal server error"
+// @Router /auth/refresh [post]
 func (h *AuthHTTPHandler) RefreshToken(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
